# rcli

./: Cargo.toml  cliff.toml
src/: lib.rs  main.rs  utils.rs
src/cli/: http_server.rs  jwt.rs  mod.rs
src/process/: http_server.rs  jwt.rs  mod.rs
