[package]
name = "rcli"
version = "0.1.0"
edition = "2021"
authors = ["hildxd"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
axum = { version = "0.7.5", features = [
  "http2",
  "query",
  "tracing",
  "matched-path",
] }
chrono = "0.4.38"
clap = { version = "4.5.11", features = ["derive"] }
enum_dispatch = "0.3.13"
jsonwebtoken = "9.3.0"
serde = { version = "1.0.204", features = ["derive"] }
tokio = { version = "1.39.2", features = [
  "rt",
  "rt-multi-thread",
  "macros",
  "net",
  "fs",
] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
